added cookie popup

--- a/hardware.html
+++ b/hardware.html
@@ -194,6 +194,14 @@
 
     </div>
   </footer>
+
+    <!-- Cookie Consent -->
+  <div id="cookieConsent">
+    <div class="cookie-container">
+        <p>This website uses cookies to ensure you get the best experience on our website. <a href="#">Learn more</a></p>
+        <button id="acceptCookies">Got it!</button>
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
