--- a/index.html
+++ b/index.html
@@ -165,7 +165,15 @@
       <a class="w3-hover-opacity" target="_blank" href="https://www.codewars.com/users/gary909"> <img src="images/codewars_icon.png" width="23" height="23" alt="Codewars icon" title="Link to Codewars"></a>
       <a class="fa fa-linkedin w3-hover-opacity" target="_blank" href="https://www.linkedin.com/in/gary-white-3a779a51/" alt="LinkedIn icon" title="LinkedIn Link"></a>
     </div>
+
   </footer>
+    <!-- Cookie Consent -->
+  <div id="cookieConsent">
+    <div class="cookie-container">
+        <p>This website uses cookies to ensure you get the best experience on our website. <a href="#">Learn more</a></p>
+        <button id="acceptCookies">Got it!</button>
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
