--- a/secretPage.html
+++ b/secretPage.html
@@ -11,13 +11,14 @@
     <br>
     <p>Affinity Designer Work:</p>
     <br>
+    <p>Paper Flyer:</p>
+    <br>
+    <img src="images\hidden\lodgitFlyer1.jpg" alt="secret image" style="width:1200px;height:auto;">
+    <br>
     <p>Large Printed Banner:</p>
     <br>
     <img src="images\hidden\lodgitBanner.jpg" alt="secret image" style="width:500px;height:auto;">
     <br>
-    <p>Paper Flyer:</p>
-    <br>
-    <img src="images\hidden\lodgitFlyer1.jpg" alt="secret image" style="width:1200px;height:auto;">
     <br>
     <p>Rough Design Internet Booking Engine:</p>
     <br>
@@ -111,5 +112,13 @@
     <br>
     <img src="images\hidden\keysAndDoors.gif" alt="secret image" style="width:480px;height:auto;">
     <br>
+        <!-- Cookie Consent -->
+    <div id="cookieConsent">
+        <div class="cookie-container">
+            <p>This website uses cookies to ensure you get the best experience on our website. <a href="#">Learn more</a></p>
+            <button id="acceptCookies">Got it!</button>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
