added cookie popup

--- a/about.html
+++ b/about.html
@@ -815,6 +815,24 @@
       <br><br>
     </div>
 
+  <!-- Learn More About Cookies Section -->
+  <div class="w3-content w3-container w3-padding-64" id="cookies-info">
+    <h2 class="w3-center">Learn More About Cookies</h2>
+    <p>Cookies are small pieces of data that are stored on your device when you visit a website. They are used to remember information about you, such as your login information, preferences, and usage history. Cookies are essential for providing a better user experience by remembering your settings and preferences.</p>
+    
+    <h3>Types of Cookies We Use</h3>
+    <p>We use different types of cookies to enhance your experience on our website:</p>
+    <ul>
+        <li><strong>Essential Cookies:</strong> These cookies are necessary for the website to function properly. They enable core functionalities such as security, network management, and accessibility.</li>
+        <li><strong>Performance Cookies:</strong> These cookies collect information about how you use our website, such as which pages you visit most often. This information helps us improve the website's performance and your experience.</li>
+        <li><strong>Functional Cookies:</strong> These cookies allow the website to remember choices you make (such as your username, language, or the region you are in) and provide enhanced, more personalized features.</li>
+        <li><strong>Targeting Cookies:</strong> These cookies are used to deliver advertisements that are relevant to you and your interests. They remember that you have visited our website and this information is shared with other organizations such as advertisers.</li>
+    </ul>
+
+    <h3>Managing Cookies</h3>
+    <p>You have the right to decide whether to accept or reject cookies. You can set or amend your web browser controls to accept or refuse cookies. If you choose to reject you will be redirected to another site (google.com)</p>
+  </div>
+
 
   <!-- Footer -->
   <footer class="w3-center w3-black w3-padding-64">
@@ -828,11 +846,14 @@
     </div>
   </footer>
 
-    <!-- Cookie Consent -->
+  <!-- Cookie Consent -->
   <div id="cookieConsent">
     <div class="cookie-container">
-        <p>This website uses cookies to ensure you get the best experience on our website. <a href="#">Learn more</a></p>
-        <button id="acceptCookies">Got it!</button>
+        <p>This website uses cookies to ensure you get the best experience on our website. <a href="about.html#cookies-info">Learn more</a></p>
+        <div>
+            <button id="acceptCookies">Got it!</button>
+            <button id="declineCookies">No</button>
+        </div>
     </div>
   </div>
   <script src="app.js"></script>
