--- a/contact.html
+++ b/contact.html
@@ -89,11 +89,14 @@
     </div>
   </footer>
   <script src="app.js"></script>
-    <!-- Cookie Consent -->
+  <!-- Cookie Consent -->
   <div id="cookieConsent">
     <div class="cookie-container">
-        <p>This website uses cookies to ensure you get the best experience on our website. <a href="#">Learn more</a></p>
-        <button id="acceptCookies">Got it!</button>
+        <p>This website uses cookies to ensure you get the best experience on our website. <a href="about.html#cookies-info">Learn more</a></p>
+        <div>
+            <button id="acceptCookies">Got it!</button>
+            <button id="declineCookies">No</button>
+        </div>
     </div>
   </div>
   <script src="app.js"></script>
